my-app/src/Main.css
@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Roboto:300,400,900');

/* BASELINE */

h1 {
  text-align: left;
  font-family: 'Playfair Display', serif;
  font-weight: 700;
  font-size: 2.0em;
}

a, button {
  border: none;
  background-color: transparent;
  font: inherit;
  text-decoration: none;
  color: black;
}

a:hover, button:hover {
  cursor: pointer;
  margin-top: -1px;
  color: #EA1C44;
}


/* HEADER */

.App {
  text-align: left;
  color: black;

  padding-top: 10px;

  position: fixed;
  height: 100vh;
  width: 100%;
  overflow: scroll;
  -webkit-overflow-scrolling: touch;
}

.App-header {
  height: 60px;
}

/* NAVBAR */

.name-box {
  float: left;
  position: relative;
  width: 120px;
  height: 35px;
}

.red-rectangle {
  position: absolute;
  top: -2px;
  width: 8px;
  height: 24px;
  background-color: red;
  float: left;
}

.navbar .my-name {
  margin: 0;
  width: 120px;
}

.pages-box {
  float: right;
}

.navbar button {
  margin-left: 45px;

  -webkit-transition: margin 0.3s ease-out;
  -moz-transition: margin 0.3s ease-out;
  -o-transition: margin 0.3s ease-out;
}

.navbar button:first-child {
  margin-left: 0;
}

.navbar button:hover {
  font-weight: 600;
}

.hamburger {
  float: right;
  display: none;
}

@media all and (max-width: 500px) {
  .navbar button {
    margin-left: 15px;
  }
  .pages-box {
    display: none;
    text-align: center;
    clear: both;
    width: 100%;
  }
  .pages-box.unhidden {
    display: block;
  }
  .hamburger {
    display: block;
  }
}

.navbar {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  color: #777;

  width: 100%;
  background-color: rgba(255, 255, 255, 0.8);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;

  padding-top: 20px;
  padding-left: 25px;
  padding-right: 25px;
  box-sizing: border-box;
  display: block;
}

@media all and (min-width: 650px) {
  .navbar {
    padding-left: calc((100vw - 600px)/2);
    padding-right: calc((100vw - 600px)/2);
  }
}

@media all and (min-width: 980px) {
  .navbar {
    padding-left: 190px;
    padding-right: 190px;
  }
}

@media all and (min-width: 1440px) {
  .navbar {
    padding-left: calc((100vw - 1060px)/2);
    padding-right: calc((100vw - 1060px)/2);
  }
}

